# uwu-music-player

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md  install.sh  shell.nix  update.sh
src/: main.cpp
src/art/: ascii_art.cpp  ascii_art.h
src/audio/: audio_player.cpp  audio_player.h
src/metadata/: metadata_reader.cpp  metadata_reader.h
src/playlist/: playlist_manager.cpp  playlist_manager.h
src/streaming/: youtube_stream.cpp  youtube_stream.h
src/ui/: file_browser.cpp  file_browser.h  playback_ui.cpp  playback_ui.h  search_ui.cpp  search_ui.h  ui_common.cpp  ui_common.h
src/utils/: utils.cpp  utils.h
